syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbimages";

package images;


service Images {
  rpc CreateImage (stream CreateImageRequest) returns (CreateImageResponse) {}
  rpc RetrieveImages (RetrieveImagesRequest) returns (RetrieveImagesResponse) {}
  rpc DeleteImages (DeleteImagesRequest) returns (google.protobuf.Empty) {}
}


message CreateImageRequest{
  oneof corpus{
    Metadata metadata = 1;
    bytes chunk = 2;
  }
}

message CreateImageResponse {
  string id = 1;
  int64 size = 2;
  string uri = 3;
  uint64 user_id = 4;
}

message RetrieveImagesRequest{
  repeated string ids = 1;
}

message RetrieveImagesResponse {
  message Data {
    string uri = 1;
    uint64 user_id = 2;
  }
  repeated Data images = 1;
}

message DeleteImagesRequest{
  string access_token = 1;
  repeated string ids = 2;
}

message Metadata {
  string ext = 1 [(validate.rules).string = {in: ["svg", "jpg", "jpeg", "png"]}];
  string access_token = 2;
}
